# linkml-arrays-paper

./: .gitignore  README.md  myst.yml  pyproject.toml
src/: _config.yml  _toc.yml  index.md  linkml-arrays-paper.bib
src/examples/: examples.md  nwb_linkml.md
src/implementation/: implementation.md  nwb.md  spec.md
src/intro/: _frictionless.md  intro.md  prior_art.md
src/linkml_arrays_paper/plugins/: draft.py
