[project]
name = "linkml-arrays-paper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = [
    "jupyter-book>=1.0.3",
    "mystmd>=1.3.15",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "myst start"